removed download icon

--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -57,7 +57,7 @@
       <% end %>
       <% if !@dataset.attachments.empty? %>
         <li>
-          <a class="down" href="<%= download_dataset_path(@dataset) %>"><span>Download</span></a>
+          <a class="" href="<%= download_dataset_path(@dataset) %>"><span>Download</span></a>
         </li>
       <% end %>
     </li>
