--- a/app/views/notifier/send_slide_request_email.html.erb
+++ b/app/views/notifier/send_slide_request_email.html.erb
@@ -1,43 +1,3 @@
 <p>A slide scanning service request has been made by <%= @user.full_name %> with the following details:</p>
 
-<p>
-  Name : <%= @user.full_name %><br/>
-  Email : <%= @user.email %><br/>
-  Supervisor : <%= @user.get_supervisor_name %><br/>
-  Supervisor Email : <%= @user.get_supervisor_email %><br/>
-  Dept/Group: <%= @params[:dept_group] %><br/>
-  Reference Lab:  <%= @params[:reference_lab] %><br/>
-  Project: <%= @project.name %><br/>
-  Project owner : <%= @project.user.full_name %><br/>
-  Project owner's email : <%= @project.user.email %><br/>
-
-</p>
-
-<h3>Account Details</h3>
-<p>
-
-  Fund Number: <%= @params[:fund_number] %><br/>
-  Dept ID: <%= @params[:dept_id] %><br/>
-  Project Number: <%= @params[:project_number] %><br/>
-
-</p>
-<h3>Ethics Approval</h3>
-<p>
-  <% if @params[:approval_not_required] %>
-    Ethics approval not required.
-  <% else %>
-    Ethics Approval Number: <%= @params[:approval_number] %><br/>
-  <% end %>
-
-</p>
-
-<h3>Scanning Details</h3>
-<p>
-
-  Number of slides to be scanned: <%= @params[:num_slides] %><br/>
-  Type of Scanning: <%= @params[:scanning_type] %><br/>
-  Magnification: <%= @params[:magnification] %><br/>
-  Include Algorithms: <%= @params[:include_algorithms] %><br/>
-  Fluorescent Label: <%= @params[:fluorescent_label] %><br/>
-
-</p>
+<%= render :partial => 'notifier/slide_scanning_details', :locals => { :user => @user, :project => @project, :params => @params } %>
