--- a/app/views/projects/_slide_form.html.erb
+++ b/app/views/projects/_slide_form.html.erb
@@ -102,7 +102,7 @@
 
     <div class="field">
       <%= label_tag 'slide[fluorescent_label]', 'Fluorescent Label:' %>
-      <%= select_tag 'slide[fluorescent_label]', options_for_select(@fluorescent_labels), :include_blank => "Please select...", :multiple => true, :class => 'optional' %>
+      <%= select_tag 'slide[fluorescent_label]', options_for_select(@fluorescent_labels), :multiple => true, :class => 'optional' %>
     </div>
   </div>
 
