--- a/app/views/ands_publishables/_preview_form.html.erb
+++ b/app/views/ands_publishables/_preview_form.html.erb
@@ -213,8 +213,7 @@
       return false;
     }
   });
-  <% else %>
-
+  <% elsif @ands_publishable.moderator != current_user %>
   $('.jqmClose').click(function () {
     return confirm("Are you sure you want to cancel the the republishing process?");
   });
