--- a/app/views/ands_publishables/edit.js.erb
+++ b/app/views/ands_publishables/edit.js.erb
@@ -4,4 +4,5 @@ $('#preview_ands_publishable_dialog').jqmHide();
 $('#wizard').html('<%= escape_javascript(render :partial => 'form', :locals => {:action => "edit"}) %>');
 $('#edit_ands_publishable_dialog').jqm({modal:true});
 $('#edit_ands_publishable_dialog').jqmShow();
-$('[id$=_dropdown]').removeClass('ac_loading');
+$('[id^=show_][id$=_wizard]').removeClass('ac_loading');
+$('#share_dropdown').removeClass('ac_loading');
