#400 when previewing and ANDS publish request, hitting the close button generates the wrong warning

--- a/app/views/ands_publishables/_preview_form.html.erb
+++ b/app/views/ands_publishables/_preview_form.html.erb
@@ -215,7 +215,7 @@
   });
   <% elsif @ands_publishable.moderator != current_user %>
   $('.jqmClose').click(function () {
-    return confirm("Are you sure you want to cancel the the republishing process?");
+    return nil
   });
 
   <% end %>
