--- a/app/views/api/index.html.erb
+++ b/app/views/api/index.html.erb
@@ -66,7 +66,7 @@ Value: <input id="metadata_value" name="metadata_value" type="text"><br>
     waiting();
     var resp;
     resp = $.ajax({
-      url: "<%= api_samples_path %>",
+      url: "hello there!",
       type: "GET",
       contentType: "application/json",
       success: function(content, textStatus, jqXHR) {
