--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <div id="container_header" class="line">
 
-  <div class="unit">
-    <a id="unsw_logo_container" href="http://www.unsw.edu.au"><img src="/images/unsw-logo-white.png" border="0"></a>
+ <div class="unit">
+    <a id="unsw_logo_container" href="www.unsw.edu.au"><img src="/images/unsw-logo-white.png" border="0"></a>
   </div>
 
   <div id="header_title" class="unit">
-    <a href="http://researchdata.unsw.edu.au"><img src="/images/LOGO_ACDATA.png"></a>
+    <a href="/" ><img src="/images/LOGO_ACDATA.png" border ="0"></a>
     Analytical Centre Data Management System
   </div>
 
