--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div id="container_header" class="line">
 
  <div class="unit">
-    <a id="unsw_logo_container" href="www.unsw.edu.au"><img src="/images/unsw-logo-white.png" border="0"></a>
+    <a id="unsw_logo_container" href="http://www.unsw.edu.au"><img src="/images/unsw-logo-white.png" border="0"></a>
   </div>
 
   <div id="header_title" class="unit">
