UNSWDC5H-456 added anchors after editing a project/experiment/sample/dataset

--- a/app/views/datasets/update.js.erb
+++ b/app/views/datasets/update.js.erb
@@ -1,5 +1,6 @@
 <% if @redirect_path %>
 window.location = '<%= @redirect_path %>';
+window.location.reload(true)
 <% else %>
 $("#edit_dataset_error_explanation").html("<%= escape_javascript(render 'shared/modal_errors', :target => @dataset) %>");
 $("#edit_dataset_error_explanation").addClass('alert');
