attempt to fix scroll bar issue for IE

--- a/app/views/experiments/update.js.erb
+++ b/app/views/experiments/update.js.erb
@@ -3,7 +3,8 @@
 
 // redirect
 window.location = '<%= @redirect_path %>';
-window.location.reload(true)
+window.location.hash = '<%= @scroll_anchor %>';
+window.location.reload(true);
 <% else %>
 
 // update errors
