attempt to fix scroll bar issue for IE

--- a/app/views/experiments/update.js.erb
+++ b/app/views/experiments/update.js.erb
@@ -3,7 +3,7 @@
 
 // redirect
 window.location = '<%= @redirect_path %>';
-window.location.reload(true)
+window.opener.location.reload(true)
 <% else %>
 
 // update errors
