--- a/app/views/projects/_slide_form.html.erb
+++ b/app/views/projects/_slide_form.html.erb
@@ -103,7 +103,7 @@
     <div class="field">
       <%= label_tag 'slide[fluorescent_label]', 'Fluorescent Label:' %>
       <%= select_tag 'slide[fluorescent_label]', options_for_select(@fluorescent_labels), :multiple => true, :class => 'optional' %>
-      <div class="field instruction instructions">Select up to four fluorescent labels.</div>
+      <div class="field instruction instructions">Select up to four fluorescent labels. Hold Ctrl or ⌘ when clicking to add to selection.</div>
     </div>
   </div>
 
