--- a/app/views/experiments/update.js.erb
+++ b/app/views/experiments/update.js.erb
@@ -2,9 +2,7 @@
 <% if @redirect_path %>
 
 // redirect
-window.location = '<%= @redirect_path %>';
-window.location.hash = '<%= @scroll_anchor %>';
-window.location.reload(true);
+window.location.replace("<%= @redirect_path %><%= @scroll_anchor %>");
 <% else %>
 
 // update errors
