Try to fix window.location.replace() not work with edit dataset

--- a/app/views/datasets/update.js.erb
+++ b/app/views/datasets/update.js.erb
@@ -1,4 +1,6 @@
 <% if @redirect_path %>
+window.location = "<%= @redirect_path %>";
+window.location.reload(true);
 window.location.replace("<%= @redirect_path %>");
 <% else %>
 $("#edit_dataset_error_explanation").html("<%= escape_javascript(render 'shared/modal_errors', :target => @dataset) %>");
