--- a/app/views/samples/update.js.erb
+++ b/app/views/samples/update.js.erb
@@ -1,5 +1,7 @@
 <% if @redirect_path %>
 <% flash[:notice] = "Sample was successfully updated." %>
+window.location = '<%= @redirect_path %>';
+window.location.reload(true)
 window.location.replace("<%= @redirect_path %>");
 <% else %>
 $("#edit_sample_error_explanation").html("<%= escape_javascript(render 'shared/modal_errors', :target => @sample) %>");
